Update devesh Movie Ranking Project.html

--- a/public 1/devesh Movie Ranking Project.html
+++ b/public 1/devesh Movie Ranking Project.html
@@ -3,11 +3,11 @@
 <hr>
 
 <ul> 
-    <h3><li> harry potter (8 Movies)</li>
-    fantasy , imaginative, magic world </h3>
+    <h3>harry potter (8 Movies)</h3>
+    fantasy , imaginative, magic world 
 
-<li><h3>The Witcher 2023 (Netflix Series)</li>
-    action, fantasy, story-telling </h3>
+<h3>The Witcher 2023 (Netflix Series)</h3>
+    <h4>action, fantasy, story-telling </h4> 
 
 <h3>Red Notice (2022)</h3>
 <h4>action, crime, thriller, mystery , fun </h4>
