Update devesh Movie Ranking Project.html

--- a/public 1/devesh Movie Ranking Project.html
+++ b/public 1/devesh Movie Ranking Project.html
@@ -4,11 +4,11 @@
 
 <ul> 
     <h3>harry potter (8 Movies)</h3>
-    <h4> fantasy , imaginative, magic world </h4> 
+     fantasy , imaginative, magic world  
 
 <h3>The Witcher 2023 (Netflix Series)</h3>
-    <h4>action, fantasy, story-telling </h4> 
+   action, fantasy, story-telling 
 
 <h3>Red Notice (2022)</h3>
-<h4>action, crime, thriller, mystery , fun </h4>
+action, crime, thriller, mystery , fun 
 </ul>
