--- a/public 1/Devesh Contact Me.html
+++ b/public 1/Devesh Contact Me.html
@@ -1,16 +1,11 @@
 <h1>Contact Me </h1>
 
 
-    NAME :- DEVESH SONI <br>
-    <br>EMAIL ID :- deveshsoni****@gmail.com <br>
-    <br>MOBILE NO :-  XXXXXXX489 <br>
-    <br>
-    ADDRESS :-  <br>D21/4 ,
-UTTAM NAGAR ,<br>
- CFCL TOWNSHIP ,<br>
-  GADEPAN ,<br>
-   KOTA <br>
-
-   RAJASTHAN <br> 
-   INDIA <br>
+   <H3>HOUSE NO 123 </H3>
+<H3>STREET NO</H3>
+<H3>ROAD NAME XYZ</H3>
+<H3>CITY HONDAA</H3>
+<H3>STATE XYZ</H3>
+<H3>COUNTRY IND</H3>
+<H3>PIN 123123</H3>
 
