--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>I am a Web developer</h2>
     <hr>
 
-   <a href="./public 1/devesh Movie Ranking Project.html"> <h3>movie-ranking</h3></a>
+   <a href="./public 1/Favourie Movie Project.html"> <h3>favourite movies </h3></a>
     <img src= "./assests 1/Images/Devesh soni movie ranking.png" height="200"  alt="Movie ranking">
      
     
