--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>I am a Web developer</h2>
     <hr>
 
-   <a href="./public 1/Favourite Movie Project.html"><h3>favourite movies </h3></a>
-    <img src= "./assests 1/Images/Screenshot 2023 (2).png" height="200"  alt="favourite movie series">
+   <a href="./public 1/Favourite Movie Project.html"><h3> favourite movie series </h3></a>
+    <img src= "./assests 1/Images/Screenshot 2023  (2).png" height="200"  alt="favourite movie series">
      
     
     <a href="./public 1/devesh Birthday invite project.html"><h3>birthday-invite</h3></a>
